fix related articles on mobile. again

--- a/wp-content/themes/motherjones/style.css
+++ b/wp-content/themes/motherjones/style.css
@@ -1713,7 +1713,7 @@ ul.social-tools.top {
   }
 }
 @media only screen and (max-width: 620px) {
-  ul.related-articles-list {
+  #related-articles ul.related-articles-list {
     padding: 0 15px;
   }
   #navbar .nav-title {
